--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: Wilson Tan
+title: About Me
 
 # Your name to show in the footer
-author: Hello!
+author: Wilson Tan
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -49,11 +49,11 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # You can change the order that they show up on the page by changing the order here.
 # Uncomment the links you want to show and add your information to each one.
-# social-network-links:
-#   email: "someone@example.com"
+social-network-links:
+  email: "wtan1167@usc.edu"
 #   rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #   facebook: deanattali
-#   github: daattali
+  github: Wilson3B
 #   twitter: daattali
 #   patreon: DeanAttali
 #   youtube: "@daattali"
